Version 5.1.6
- Fix the visibility of types in zeep::json::detail::iterator_impl
- Reintroduced resolving of bind addresses, using "localhost" is
  easier than only numerical addresses.

Version 5.1.5
- update zeepConfig.cmake to include required link file
- fix infinite loop in processing incorrect :inline constructs

Version 5.1.4
- Update cmakefile to work more reliably

Version 5.1.3
- Update SONAME to 5.1
- Create reproducible builds of documentation (and thus whole package)

Version 5.1.2
- Fix glob code to match empty path specifications for controllers
- Change CMakeLists file to generate only shared or static libs,
  but not both
- Generate pkgconfig file again

Version 5.1.1
- Removed uriparser again. URI implementation is now regex based.
- Replaced GNU configure with cmake

Version 5.1.0
- Added base32 encoding/decoding
- Various REST controller fixes, mainly in accepting parameters
- The library is now always compiled with PIC
- Requred boost version is now 71
- Ignore SIGCHLD in foreground mode, signals are now handled by 
  cross platform implementation
- reintroduced a Windows version
- Fixed a couple of security issues, all caused by incorrectly
  parsing uri's. Switched to using liburiparser for now.

Version 5.0.2
- Add support for building shared libraries
- Decoupled example code from rest, should now be build after installation,
  or use the STAGE=1 option to make.
- rest controller can now return a reply object, adding flexibility

Version 5.0.1

- Update makefile to include changes made for the Debian package
- Fix writing HTML, proper empty elements
- Added some workarounds to build on macOS
- Fixed endianness issue in sha implementation

Version 5.0.0

- Total rewrite of about everything
- Controllers are now the main handlers of requests, three major
  variants for HTML, REST and SOAP.
- Implemented some cryptographic routines in order to drop
  dependency on libcrypto++
- Redesigned authentication, dropped HTTP digest and opted for JWT,